# algorithmic-trading

./: .gitignore  Plan  ProblemStatement.txt  README.md  ok  pyproject.toml  requirements.txt
data/raw/anonymized_data/: Asset_001.csv  Asset_002.csv  Asset_003.csv  Asset_004.csv  Asset_005.csv  Asset_006.csv  Asset_007.csv  Asset_008.csv  Asset_009.csv  Asset_010.csv  Asset_011.csv  Asset_012.csv  Asset_013.csv  Asset_014.csv  Asset_015.csv  Asset_016.csv  Asset_017.csv  Asset_018.csv  Asset_019.csv  Asset_020.csv  Asset_021.csv  Asset_022.csv  Asset_023.csv  Asset_024.csv  Asset_025.csv  Asset_026.csv  Asset_027.csv  Asset_028.csv  Asset_029.csv  Asset_030.csv  Asset_031.csv  Asset_032.csv  Asset_033.csv  Asset_034.csv  Asset_035.csv  Asset_036.csv  Asset_037.csv  Asset_038.csv  Asset_039.csv  Asset_040.csv  (+60 more)
notebooks/: 00_end_to_end_pipeline.ipynb  01_data_cleaning_features.ipynb  02_modeling_meta_labeling.ipynb  03_backtest_analysis.ipynb  04_statsarb_overlay.ipynb
scripts/: plot_asset_5y.py  run_backtest.py  run_features.py  run_train.py
src/at/: __init__.py
src/at/backtest/: __init__.py  costs.py  metrics.py  simulator.py
src/at/data/: __init__.py  cleaning.py  ingest.py  schema.py
src/at/features/: __init__.py  build.py  returns.py  technical.py
src/at/models/: __init__.py  meta_label.py  signals.py
src/at/statsarb/: __init__.py  pairs.py
src/at/utils/: paths.py
src/at/viz/: plots.py
src/precog_algo_trading.egg-info/: PKG-INFO  SOURCES.txt
